# pydep-errors-framework

./: .gitignore  Makefile  README.md  pyproject.toml
inputs/: a.toml
pydep/: __init__.py  __main__.py  algorithms.py  costs.py  deps.py  depsmgr.py  logs.py  opts.py  parser.py  rels.py  tests.py  vercache.py  versions.py
src/: algorithms.py  deps.py  rels.py  tests.py
stats/: number_vers.py  stats.py  stime.py
