[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydep"
authors = [{name = "dcordb"}]
dynamic = ["version", "description"]

dependencies = [
    "tomli",
    "httpx",
    "typer",
    "packaging"
]

[project.scripts]
pydep = "pydep.__main__:entrypoint"
